Twenty Seventeen: Fix double bottom-margins below embeds
Corrects an issue where both the containing paragraph and embed had bottom margins, causing unwanted extra space.

Props westonruter.

Fixes #42118.

Built from https://develop.svn.wordpress.org/trunk@41888


git-svn-id: http://core.svn.wordpress.org/trunk@41722 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyseventeen/style.css
+++ b/wp-content/themes/twentyseventeen/style.css
@@ -2820,6 +2820,14 @@ object {
 	max-width: 100%;
 }
 
+/* Remove bottom on embeds that wrapped in paragraphs via wpautop. */
+
+p > embed:only-child,
+p > iframe:only-child,
+p > object:only-child {
+	margin-bottom: 0;
+}
+
 .wp-caption,
 .gallery-caption {
 	color: #666;
